src/test/deca/syntaxe_contextuelle/invalid/test_pass_3_opNot_no_boolean_operand.deca
// Description:
//    Program testing that you can not do a not operation with an operand that is not type boolean
//
// Results:
//    error
//
// History:
//    Created on 10/01/2025

{
    boolean a = !4;
}
